# wtf

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
src/: ai.rs  commands.rs  config.rs  corrections.rs  executor.rs  history.rs  main.rs  path.rs  ui.rs
